# infractl

./: .env  .env.example  .gitignore  Dockerfile  README.md  Sealed.Secrets.Automation.for.GitOps.Okta.Integration.md  apiservice-metrics-server.yaml  bootstrap.sh  cluster.role.yaml  deployment.yaml  fixed-apiservice.yaml  generate-sealed-okta.sh  infractl-command-roadmap.md  kubeconfig.yaml  kustomization.yaml  manifests.yaml  metrics-server-service.yaml  nodelocaldns.yaml  requirements.txt  serviceaccount.yaml  setup.py  test.rbac.yaml  test.yaml
ansible/: hosts-cluster.ini  hosts-kevin.ini  hosts-us-east-prod-dc11a.ini  hosts-us-west-dev-kevin-vu.ini  playbook.yml  requirements.yml
apps/: README.md  plan.md
docs/: BACKUP.md  OPERATIONS.md  RBAC.md  README.md  gitops-bootstrap.md
infractl/: .env.example  README.md  cli.py  cluster.py  config.py  logging.py  pyproject.toml  registry.py
infractl/modules/rke2/installer/: README.md  __init__.py  __main__.py  configuration.py  core.py  deployment.py  models.py  pyproject.toml  service.py  setup.py  utils.py  verification.py
infractl/modules/rke2/installer/templates/: config.yaml.j2
manifests/: argocd-cm.yaml  argocd-rbac-cm.yaml
projects/: dev-app-project.yaml  prod-app-project.yaml
scripts/: argocd-doctor.sh  clean-metrics-server-install.yaml  cleanup-multipass.sh  create_app_dirs.sh  export-kubeconfig.sh  fix-metrics-rbac-final.sh  generate-inventory.sh  health-check.sh  install-argocd.sh  lint-ansible.sh  manage-sealed-secrets.sh  parse-cluster.sh  patch-argocd-password.sh  postmark-alert.sh  run-ansible.sh  (+8 more)
(+468 files in other folders)
